--- a/Front/sistema-hacienda/src/index.html
+++ b/Front/sistema-hacienda/src/index.html
@@ -25,6 +25,7 @@
   <!-- Main css -->
   <link rel="stylesheet" href="assets/css/main.min.css">
 
+    
 
   <!-- *************
     ************ Vendor Css Files *************
@@ -44,7 +45,8 @@
   </div>
   <!-- Page wrapper end -->
   <!-- Required jQuery first, then Bootstrap Bundle JS -->
-  <script src="assets/js/jquery.min.js"></script>
+   <!--<script src="assets/js/jquery.min.js"></script> -->
+
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/modernizr.js"></script>
   <script src="assets/js/moment.js"></script>
@@ -54,11 +56,9 @@
   ************* -->
   <!-- Overlay Scroll JS -->
   <script src="assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
-  <script src="assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
-
-
-
+  <!--  <script src="assets/vendor/overlay-scroll/custom-scrollbar.js"></script> -->
   <!-- Main Js Required -->
   <script src="assets/js/main.js"></script>
+
 </body>
 </html>
